--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       #- run: npm ci && npm run build
+      - name: Install Node modules   
+      - run: npm install
       - run: CI=false npm run build --if-present
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
