--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -5,7 +5,7 @@ name: Deploy to Firebase Hosting on merge
 'on':
   push:
     branches:
-      - main1
+      - main
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -14,7 +14,7 @@ jobs:
       #- run: npm ci && npm run build
       - name: Install Node modules   
       - run: npm install
-      - run: CI=false npm run build --if-present
+      - run: CI=false vite build --if-present
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
