--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,7 +14,9 @@ jobs:
       #- run: npm ci && npm run build
       - name: Install Node modules   
       - run: npm install
+      - name: build app
       - run: CI=false vite build --if-present
+      - name: deploy
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
